# huffman

./: .gitignore  Doxyfile  LICENSE  Makefile  Makefile.am  Makefile.in  Makefile_win  README.md  configure  configure.ac
doc/: Doxyfile.in  Makefile.am  Makefile.in
doc/html/: annotated.html  bit__set_8c.html  bit__set_8c_source.html  bit__set_8h.html  bit__set_8h__dep__incl.dot  bit__set_8h__dep__incl.md5  bit__set_8h__incl.dot  bit__set_8h__incl.md5  bit__set_8h_source.html  classes.html  code__t_8h.html  code__t_8h__dep__incl.dot  code__t_8h__dep__incl.md5  code__t_8h_source.html  code__tbl_8c.html  code__tbl_8c_source.html  code__tbl_8h.html  code__tbl_8h__dep__incl.dot  code__tbl_8h__dep__incl.md5  code__tbl_8h__incl.dot  code__tbl_8h__incl.md5  code__tbl_8h_source.html  command__t_8h.html  command__t_8h__dep__incl.dot  command__t_8h__dep__incl.md5  command__t_8h_source.html  compress_8c.html  compress_8c__incl.dot  compress_8c__incl.md5  compress_8c_source.html  compress_8h.html  compress_8h__dep__incl.dot  compress_8h__dep__incl.md5  compress_8h__incl.dot  compress_8h__incl.md5  compress_8h_source.html  decompress_8c.html  decompress_8c_source.html  decompress_8h.html  decompress_8h__dep__incl.dot  (+111 more)
doc/html/search/: all_0.js  all_1.js  all_11.js  (+49 more)
src/: Makefile.am  Makefile.in  bit_set.c  code_tbl.c  compress.c  decompress.c  freq_heap.c  freq_tree.c  hf.c  io.c  io_code.c  io_options.c  node_t.c  ppl.c  ppl_heap.c  ppl_tree.c  wingetopt.c  wingetopt.h
src/include/: bit_set.h  compress.h  decompress.h  io_code.h  io_options.h  node_t.h  ppl_t.h  verbosity_t.h
(+40 files in other folders)
