bin_PROGRAMS = huffman
huffman_CPPFLAGS = -I$(srcdir)/include
huffman_SOURCES = hf.c io_options.c compress.c decompress.c bit_set.c code_tbl.c io_code.c node_t.c ppl.c ppl_heap.c ppl_tree.c include/io_options.h include/compress.h include/decompress.h include/bit_set.h include/code_tbl.h include/io_code.h include/node_t.h include/ppl.h include/ppl_heap.h include/ppl_tree.h include/code_t.h include/command_t.h include/header_t.h include/verbosity_t.h include/p_utils.h include/ppl_t.h
